jsapp/scss/components/_kobo.form-builder.scss
@use 'scss/z-indexes';
@use 'scss/breakpoints';
@use 'scss/colors';
@use 'scss/mixins';
@use 'scss/libs/_mdl';
@use 'sass:color';

$s-form-builder-header: 125px;
$s-form-builder-aside: 400px;
$t-form-builder-aside-open: 200ms;
$s-form-builder-content-width: 1024px;

// FORM BUILDER MAIN LAYOUT

.form-builder {
  background-color: colors.$kobo-white;
}

.form-builder__contents {
  height: calc(100% - #{$s-form-builder-header});
  overflow-x: auto;
  overflow-y: scroll;
  margin-right: 0;
  transition: margin $t-form-builder-aside-open;
  padding: 10px;
  width: auto;

  .form-builder-message-box {
    max-width: $s-form-builder-content-width;
    margin-left: auto;
    margin-right: auto;
  }
}

@media screen and (width >= breakpoints.$b1100) {
  .form-builder-aside--visible + .form-builder {
    .form-builder__contents {
      margin-right: $s-form-builder-aside;
    }
  }
}

.form-wrap {
  width: 100%;
  padding: 45px 75px; // Similar to the previous form builder

  input,
  textarea {
    box-shadow: none;

    &:focus {
      box-shadow: none;
    }
  }

  .loading {
    min-height: 200px;
  }

  .error-message {
    width: 540px;
    margin: 24px auto;
    padding: 12px 20px;

    p {
      font-family: mdl.$font_mono;
      white-space: pre-wrap;
    }

    &__strong {
      border: 1px solid black;
      padding-right: 12px;
    }
  }
}

@media screen and (max-width: breakpoints.$b1280) {
  .form-wrap {
    padding: 20px;
  }
}

// FORM BUILDER HEADER

.form-builder-header {
  height: $s-form-builder-header;
  position: relative;
  z-index: z-indexes.$z-form-builder-header;

  .form-builder-header__row {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    align-items: center;
    gap: 20px;

    &.form-builder-header__row--primary {
      background-color: colors.$kobo-white;
      height: 75px;
      position: relative;
      z-index: 2;
      box-shadow: 0 0 3px 0 rgba(colors.$kobo-gray-800, 0.2), 0 0 10px 0 rgba(colors.$kobo-gray-800, 0.1);
    }

    &.form-builder-header__row--secondary {
      background: colors.$kobo-gray-200;
      height: 50px;
      position: relative;
      z-index: 1;
      box-shadow: 0 0 3px 0 rgba(colors.$kobo-gray-800, 0.2), 0 0 10px 0 rgba(colors.$kobo-gray-800, 0.1);
      padding: 0 20px;

      // OpenClinica: all text buttons in the secondary row should be gray, not blue
      .k-button.k-button--type-text {
        color: colors.$kobo-gray-700;

        &:hover:not([disabled]) {
          color: colors.$kobo-teal;
        }
      }
    }
  }

  .form-builder-header__cell {
    &.form-builder-header__cell--logo {
      position: relative;
      background-color: colors.$kobo-teal;
      width: 75px;
      text-align: center;
      vertical-align: middle;
      height: 75px;
      cursor: pointer;
      transition: 0.2s;

      &:hover {
        background-color: color.adjust(colors.$kobo-teal, $lightness: -10%);
      }

      &:focus {
        background-color: color.adjust(colors.$kobo-teal, $lightness: -10%);

        .k-icon {
          font-size: 40px;
          top: calc(50% - 19px);
          left: calc(50% - 19px);
        }
      }

      .k-icon {
        color: colors.$kobo-white;
        font-size: 36px;
        position: absolute;
        top: calc(50% - 17px);
        left: calc(50% - 17px);

        &::before {
          margin-right: 0;
        }
      }
    }

    &.form-builder-header__cell--name {
      flex: 1;
      // OpenClinica: indent name field from logo cell
      margin-left: 20px;

      label::first-letter {
        text-transform: uppercase;
      }

      input {
        border-radius: 0;
        padding-left: 0;
        font-size: 16px;
        // OpenClinica: gray underline only; blue on focus
        border: none;
        border-bottom: 2px solid colors.$kobo-gray-400;
        outline: none;
        background: transparent;

        &:focus {
          border-bottom-color: colors.$kobo-blue;
          box-shadow: none;
        }
      }
    }

    &.form-builder-header__cell--translations {
      p {
        margin: 0 0 0 10px;
        line-height: 15px;
        padding-top: 10px;
        font-size: 11px;

        small {
          display: block;
          color: colors.$kobo-gray-700;

          &::before {
            content: '+ ';
          }
        }
      }
    }

    &.form-builder-header__cell--buttonsTopRight {
      display: flex;
      flex-direction: row;
      gap: 10px;
      padding-right: 10px;

      // OpenClinica: outlined style for secondary (back) button
      .k-button.k-button--type-secondary {
        background-color: colors.$kobo-white;
        border: 2px solid colors.$kobo-blue;
        color: colors.$kobo-blue;

        &:hover:not([disabled]) {
          background-color: colors.$kobo-bg-blue;
        }
      }
    }

    &.form-builder-header__cell--close {
      width: 45px;
      text-align: right;
      padding: 5px;
      margin-left: 5px;
    }

    // second row
    &.form-builder-header__cell--toolsButtons {
      @include mixins.centerRowFlex;
      gap: 10px;

      // OpenClinica: toolbar action icons should be gray, not blue
      .k-button.k-button--type-text {
        color: colors.$kobo-gray-700;

        &:hover:not([disabled]) {
          color: colors.$kobo-teal;
        }
      }
    }

    &.form-builder-header__cell--supportUrl {
      // OpenClinica: larger gray help icon
      a {
        font-size: 24px;
        color: colors.$kobo-gray-700;

        &:hover {
          color: colors.$kobo-teal;
        }
      }
    }

    &.form-builder-header__cell--spacer {
      flex-grow: 1;
      height: 100%;
    }

    &.form-builder-header__cell--verticalRule {
      width: 1px;
      background: colors.$kobo-gray-300;
      height: 100%;
    }
  }
}

// FORM STYLE SETTINGS

.form-builder-aside {
  position: absolute;
  right: 0;
  bottom: 0;
  top: $s-form-builder-header;
  width: $s-form-builder-aside;
  background-color: colors.$kobo-gray-200;
  transition: right $t-form-builder-aside-open;
  box-shadow: 0 0 3px 0 rgba(colors.$kobo-gray-800, 0.2), 0 0 10px 0 rgba(colors.$kobo-gray-800, 0.1);
  z-index: z-indexes.$z-form-builder-aside;

  &:not(.form-builder-aside--visible) {
    right: -1 * $s-form-builder-aside - 10px;
  }

  .form-builder-aside__content {
    padding: 30px;
    overflow-y: auto;
    height: 100%;

    .form-builder-aside__row:last-child {
      margin-bottom: 30px;
    }
  }

  .form-builder-aside__header {
    margin: 0;
    font-size: 20px;
    line-height: 28px;
    font-weight: 700;

    .k-icon {
      font-size: 20px;
      margin-left: 3px;
      vertical-align: top;
    }
  }

  .form-builder-aside__header:not(:last-child) {
    margin-bottom: 10px;
  }

  .form-builder-aside__row:not(:first-child) {
    margin-top: 20px;
  }
}

// CASCADE MODAL CONTENTS

.cascade-popup {
  textarea {
    margin: 15px 0;
    width: 100%;
    height: 220px;
    border: 2px solid colors.$kobo-gray-300;
  }

  .cascade-popup__buttonWrapper {
    padding-top: 10px;
    text-align: right;
  }

  .cascade-popup__message {
    &--warning {
      color: colors.$kobo-red;
    }

    &--ready {
      color: colors.$kobo-teal;
    }
  }

  .cascade-help {
    text-align: right;

    i {
      font-size: 18px;
      color: colors.$kobo-gray-700;
    }
  }
}

.survey-editor {
  .ui-sortable-placeholder {
    border: 2px dashed colors.$kobo-blue;
    visibility: visible !important;
    min-height: 80px;
    padding: 0;
  }

  // Semi-hack: lib-list__item already have margins, non-library placeholder
  // doesn't. lib-list__item should also be transparent--for formbuilder revamp
  // all placeholders should be the same
  .placeholder {
    margin: 5px 0;
  }
}

// FORM BUILDER SMALL SCREEN ADJUSTMENTS

// TODO: we should rework all these media queries to mobile first, but it's
// possible we would rewrite form builder, so it would be useless

@media screen and (width < breakpoints.$b768) {
  .form-builder-header {
    .form-builder-header__row {
      gap: 5px;
    }

    .form-builder-header__row.form-builder-header__row--secondary {
      padding: 0 5px;
    }

    .form-builder-header__cell--verticalRule {
      display: none;
    }

    .form-builder-header__cell.form-builder-header__cell--logo {
      width: 50px;
    }
  }
}

@media screen and (width < breakpoints.$b768) {
  .form-builder-header__cell--library-toggle {
    display: none;
  }
}

@media screen and (pointer: coarse) {
  .form-builder-header__cell--library-toggle {
    display: none;
  }
}

@media screen and (width <= 480px) {
  .card--selectquestion__expansion {
    padding-right: 5px;
    padding-left: 25px;
  }

  .multioptions__option {
    div.editable-wrapper {
      width: 65%;
    }

    code {
      width: 33%;
      margin-left: 1%;
      margin-right: 0;

      label {
        font-size: 10px;
        padding-left: 2px;
        width: 24%;
      }

      span {
        padding-right: 2px;
        width: 64%;
        overflow: hidden;
      }
    }
  }

  .btn--addrow {
    left: -40px;
  }

  .card__settings__content {
    padding: 20px;
    padding-right: 10px;
  }

  .card__settings__fields__field {
    > label {
      text-align: initial;
      margin-right: 1%;
    }

    .settings__input {
      input[type='text'] {
        border: 1px solid colors.$kobo-gray-300;
      }
    }
  }

  .questiontypelist__item {
    text-align: center;
    background: colors.$kobo-gray-200;

    i {
      display: block;
      margin: 0 auto;
      margin-bottom: 5px;
    }
  }
}

